use jna instead of jni